[package]
name = "cge-www-universal"
version = "31.11.0"
edition = "2021"
authors = ["CGE Alpha Constitutional Architects"]
license = "AGPL-3.0-or-later"

[features]
default = ["http", "websocket", "atproto", "global-federation"]
http = ["dep:hyper", "dep:reqwest", "dep:http", "dep:tower"]
websocket = ["dep:tokio-tungstenite", "dep:tungstenite"]
atproto = ["dep:cge-atproto-federation"]
global-federation = ["dep:libp2p", "dep:multiaddr", "dep:ipnet"]
quic = ["dep:quinn", "dep:rustls"]

[dependencies]
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
hyper = { version = "0.14", optional = true, features = ["server", "client", "http1", "http2", "tcp"] }
reqwest = { version = "0.11", optional = true }
http = { version = "0.2", optional = true }
tower = { version = "0.4", optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
tungstenite = { version = "0.20", optional = true }
cge-atproto-federation = { path = "../cge_atproto_federation", optional = true }
libp2p = { version = "0.52", optional = true, features = ["tcp", "websocket", "noise", "yamux", "dns"] }
multiaddr = { version = "0.18", optional = true }
ipnet = { version = "2.8", optional = true }
quinn = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
prost = "0.12"
tonic = { version = "0.10", optional = true }
blake3 = "1.5"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
regex = "1.10"
futures = "0.3"
async-trait = "0.1"
petgraph = "0.6"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bin]]
name = "init_web_matrix"
path = "src/bin/init_web_matrix.rs"

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"

[[bin]]
name = "websocket_server"
path = "src/bin/websocket_server.rs"

[[bin]]
name = "quic_server"
path = "src/bin/quic_server.rs"

[[bin]]
name = "dns_service"
path = "src/bin/dns_service.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
