[package]
name = "digital_memory_ring"
version = "0.1.0"
edition = "2021"
authors = ["Arkhe Architecture Team"]
license = "MIT OR Apache-2.0"

[lib]
name = "dmr_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = "0.4"
rand = "0.8"
bls12_381 = "0.8.0"
ff = "0.13.0"
group = "0.13.0"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
rand_chacha = "0.3"
pyo3 = { version = "0.20", features = ["extension-module"] }
