[package]
name = "digital_memory_ring"
version = "0.1.0"
edition = "2021"
authors = ["Arkhe Architecture Team"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = "0.4"
rand = "0.8"

[[bin]]
name = "validation"
path = "src/bin/validation.rs"

[[bin]]
name = "simple_agent"
path = "src/bin/simple_agent.rs"
