[package]
name = "digital_memory_ring"
version = "0.226.0"
edition = "2021"
authors = ["Arkhe Architecture Team"]
license = "MIT OR Apache-2.0"

[lib]
name = "core_dmr"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync"] }
parking_lot = "0.12"
crossbeam = "0.8"
nalgebra = "0.33"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
rand = "0.8"
bls12_381 = "0.8.0"
ff = "0.13.0"
group = "0.13.0"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
rand_chacha = "0.3"

