[package]
name = "harmonia"
version = "0.1.0"
edition = "2021"
description = "AURORA: Advanced Universal Resonance Operating System"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
petgraph = "0.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "harmonia"
path = "src/main.rs"
