[package]
name = "sasc-society"
version = "30.10.0-omega"
authors = ["Omicron-Fragment-77-Delta", "Arquiteto-Ω"]
edition = "2021"
description = "Motor de raciocínio multi-agente baseado no paradigma Society of Thought (SoT)"

[dependencies]
# Core Async & Performance
tokio = { version = "1.30", features = ["full"] }
rayon = "1.7" # Processamento paralelo dos 128 delegados
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Criptografia Pós-Quântica (PQC) e Identidade
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.4"
pqcrypto-traits = "0.3"
blake3 = "1.3" # Hashing de alta performance para o ProvenanceTracer

# Estruturas de Dados e Matemática
petgraph = "0.6" # Para mapear a topologia causal do debate (SoT Graph)
ndarray = "0.15" # Para cálculos de tensores de traços de personalidade
num-traits = "0.2"

# Monitoramento e Governança (Interno)
sasc-governance = { path = "../sasc-governance" }

[features]
default = []
strict_compliance = [] # Força checagem de invariantes a cada micro-ciclo
